# nyanko_automation

./: .gitignore  README.md  pyproject.toml
config/: default.json  snippets.json
scripts/: bootstrap.sh  run_packman.sh
src/nyanko_automation/: __init__.py  actions.py  cli.py  engine.py  routines.py  screenshot.py  snippets.py  window.py
tests/: test_snippets.py
